# cloud-networking-solutions

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
codelabs/: about.md
codelabs/agw-cuj-arun-egress-gmcp/agent-dj/: deploy_agent.py  pyproject.toml  setup.sql
codelabs/agw-cuj-arun-egress-gmcp/agent-dj/agent/: __init__.py  agent.py
codelabs/agw-cuj-arun-egress-gmcp/endpoints/: googleapis.txt  register_endpoints.py
codelabs/agw-cuj-arun-ingress-modar/agent-crm/: deploy_agent.py  pyproject.toml
codelabs/agw-cuj-arun-ingress-modar/agent-crm/agent/: agent.py
codelabs/agw-cuj-arun-ingress-modar/agent-crm/data/: customers_east.csv  customers_vip.csv  customers_west.csv
demos/agent-gateway/src/mortgage-agent/: deploy_agent.py
demos/agent-gateway/terraform/: main.tf  outputs.tf  variables.tf
demos/service-extensions-gke-gateway/src/corporate-email/: main.py  otel_setup.py  test_main.py
demos/service-extensions-gke-gateway/src/dlp-ext-proc/: Dockerfile  go.sum
demos/service-extensions-gke-gateway/src/income-verification-api/: main.py  otel_setup.py  test_main.py
demos/service-extensions-gke-gateway/src/legacy-dms/: otel_setup.py  pyproject.toml  server.py  test_server.py
demos/service-extensions-gke-gateway/src/mortgage-agent/: deploy_agent.py  pyproject.toml
reference-architectures/networking-for-ai-inference/src/bbr-ext-proc-go/: go.mod
reference-architectures/networking-for-ai-inference/terraform/: main.tf
skills/global-front-end/day-zero-config/: MAIN_AGENT.md
(+22 files in other folders)
